# raytraced-pixel-art-renderer

./: Cargo.toml  render-graph.dot  rust-toolchain.toml
app/: Cargo.toml  build.rs
app/src/: renderer.rs
assets/shaders/: fullscreen.wgsl  mandelbrot.glsl.comp  pixel_art.wgsl  raytracing.wgsl
shaders/: Cargo.toml
shaders/src/: lib.rs
src/: main.rs  renderer.rs
src/render/: blas.rs  mod.rs
